overflow fix

--- a/SCSS/_components.scss
+++ b/SCSS/_components.scss
@@ -830,6 +830,7 @@ body {
 }
 
 .home {
+  overflow: hidden;
   // background-color: #000;
   min-height: calc(100vh - 425px);
   user-select: none;
