--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -800,6 +800,7 @@ body {
 }
 
 .home {
+  overflow: hidden;
   min-height: calc(100vh - 425px);
   user-select: none;
   width: 100vw;
